# ask-the-page

./: .gitignore  README.md  app.py  pyproject.toml  server.py
chrome/: package-lock.json  package.json  rollup.config.js  vue.config.js
chrome/public/_locales/en/: messages.json
chrome/src/: background.ts  manifest.json
chrome/src/content-scripts/: App.vue
chrome/src/popup/: Popup.vue  index.html  main.ts
chrome/src/store/: app.ts
chrome/src/types/: base.ts
chrome/src/utils/: sha1.ts
server/: pyproject.toml
